# LingMinOpt

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CROSS_MEMBER_AUDIT_REPORT.md  CRUSH.md  HOOKS_VERIFIED.md  INDEPENDENCE_REPORT.md  LICENSE  LINGFLOW_INTEGRATION_PLAN.md  MCP_EVALUATION.md  PROJECT_OWNERSHIP.md  README.md  REMOTE_CONFIG.md  RENAME_REPORT.md  SECURITY.md  SESSION_RECORD_v0.2.0.md  TASK_LIST.md  pyproject.toml  setup.py  typescript
configs/: cot_prompt.yaml
data/: eval_coder_base_83q.json  eval_cron_20260613_2242_83q.json  eval_cron_20260614_1540_83q.json  eval_e2e_83q.json  eval_fewshot_83q.json  eval_fewshot_83q_v2.json  eval_fewshot_83q_v3.json  eval_fewshot_weak5.json  eval_kb4096_83q.json  eval_kb4096_v2_83q.json  eval_kb4096_v3_83q.json  eval_knowledge_base.md  eval_no_kb_83q.json  eval_noncoder_83q.json  eval_noncoder_cot_83q.json  eval_noncoder_cot_83q_latest.json  eval_public_7b_q4km_full.json  eval_public_7b_q4km_v2.json  eval_unified_base_7b.json  eval_unified_base_7b_83q.json  eval_unified_instruct_7b_83q.json  eval_v9_lora_83q.json  health_lora_training_data.json  lingai_14b_eval_results_83q.json  lingai_3b_vs_7b_comparison.json  lingai_7b_3way_comparison.md  lingai_7b_base_eval_results.json  lingai_7b_base_vs_lora.json  lingai_7b_eval_results.json  lingai_7b_reasoning_eval_results.json  lingai_7b_v10_eval_results.json  lingai_7b_v8_eval_results.json  lingai_7b_v8_syllogism_results.json  lingai_7b_v9_eval_results.json  lingai_7b_v9_syllogism_results.json  lingai_7b_vs_14b_comparison.md  lingai_deep_eval_14b_vs_7b.md  lingai_final_eval_report_v2.md  lingai_rigorous_test_results.json  lora_hyperparam_search_plan.json  (+1 more)
docs/: 7b_14b_eval_plan.md  AUDIT_REPORT_v0.5.0.md  META_KNOWLEDGE_OPTIMIZATION.md  development.md  eval_diff_design_for_collab.md  lingai_7b_upgrade_plan.md  lingai_test_report_and_training_plan.md  mcp_tools.md
examples/: LINGRESEARCH.md  README.md  lingresearch_demo.py  zhineng_bridge_demo.py
lingminopt/: __init__.py  mcp_server.py
logs/: degradation_last_result.json
scripts/: compare_v2_v3.py  convert_lora_to_gguf.py  convert_v8_gguf.py  deploy_hengyun.sh  deploy_to_hengyun.py  eval_cloud.py  eval_degradation_cron.py  eval_diff.py  eval_public_benchmarks.py  eval_unified.py  eval_v8_cpu.py  eval_v8_lora.py  (+14 more)
(+99 files in other folders)
