[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lingminopt"
version = "0.1.0"
description = "LingMinOpt - A universal minimalist self-optimization framework inspired by 灵研"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Guangda"},
]
keywords = [
    "optimization",
    "automated",
    "hyperparameter",
    "search",
    "tuning",
    "machine-learning",
    "auto-ml",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.950",
]
visualization = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]
bayesian = [
    "scipy>=1.7.0",
]

[project.scripts]
lingminopt = "lingminopt.cli.commands:cli"

[project.urls]
Homepage = "https://github.com/yourusername/lingminopt"
Documentation = "https://github.com/yourusername/lingminopt/blob/main/README.md"
Repository = "https://github.com/yourusername/lingminopt"
"Bug Tracker" = "https://github.com/yourusername/lingminopt/issues"

[tool.setuptools]
packages = ["lingminopt", "lingminopt.core", "lingminopt.config", "lingminopt.utils", "lingminopt.cli"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
